--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-Django>=1.11,<1.12
-Scrapy>=1.5,<1.6
-scrapy-djangoitem>=1.1.1,<1.2
+Django>=2.0
+Scrapy>=1.6
+scrapy-djangoitem==1.1.1
 scrapy-splash>=0.7,<0.8
-scrapyd>=1.2,<1.3
-jsonpath-rw>=1.4
-kombu>=3.0.37,<3.1
-Celery==3.1.25
-django-celery==3.2.1
-future>=0.17,<0.18
-pillow>=5.0,<6.0
-attrs>=17.4.0
+scrapyd==1.2
+jsonpath-rw==1.4.0
+kombu==3.0.23
+Celery==3.1.15
+django-celery
+future==0.17.1
+pillow==6.0
+attrs==19.1.0
 
