--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,44 @@
-Django>=2.0
-Scrapy>=1.6
-scrapy-djangoitem==1.1.1
-scrapy-splash>=0.7,<0.8
-scrapyd==1.2
+amqp==1.4.9
+anyjson==0.3.3
+asn1crypto==0.24.0
+attrs==19.1.0
+Automat==0.7.0
+billiard==3.3.0.23
+celery==3.1.15
+cffi==1.12.3
+constantly==15.1.0
+cryptography==2.7
+cssselect==1.0.3
+decorator==4.4.0
+Django==2.2.1
+django-celery==3.3.0
+future==0.17.1
+hyperlink==19.0.0
+idna==2.8
+incremental==17.5.0
 jsonpath-rw==1.4.0
 kombu==3.0.23
-Celery==3.1.15
-django-celery
-future==0.17.1
-pillow==6.0
-attrs==19.1.0
-
+lxml==4.3.3
+parsel==1.5.1
+Pillow==6.0.0
+pkg-resources==0.0.0
+ply==3.11
+pyasn1==0.4.5
+pyasn1-modules==0.2.5
+pycparser==2.19
+PyDispatcher==2.0.5
+PyHamcrest==1.9.0
+pyOpenSSL==19.0.0
+pytz==2019.1
+queuelib==1.5.0
+Scrapy==1.6.0
+scrapy-djangoitem==1.1.1
+scrapy-splash==0.7.2
+scrapyd==1.2.0
+service-identity==18.1.0
+six==1.12.0
+sqlparse==0.3.0
+Twisted==19.2.0
+vine==1.3.0
+w3lib==1.20.0
+zope.interface==4.6.0
