specify all versions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,78 +1,10 @@
-amqp==2.5.0
-apt-xapian-index==0.47
-asn1crypto==0.24.0
-attrs==19.1.0
-Automat==0.7.0
-billiard==3.5.0.5
-celery==4.2.0
-certifi==2018.8.24
-cffi==1.12.3
-chardet==3.0.4
-command-not-found==0.3
-constantly==15.1.0
-cryptography==2.7
-cssselect==1.0.3
-cupshelpers==1.0
-decorator==4.4.0
-distro-info==0.18
-Django==2.2.2
-entrypoints==0.2.3.post3
-future==0.17.1
-galternatives==1.0.1
-httplib2==0.11.3
-hyperlink==19.0.0
-idna==2.8
-incremental==17.5.0
-jsonpath-rw==1.4.0
-keyring==15.1.0
-keyrings.alt==3.1
-kombu==4.6.3
-language-selector==0.1
-lxml==4.3.4
-netifaces==0.10.4
-olefile==0.46
-parsel==1.5.1
-pexpect==4.6.0
-Pillow==5.4.1
-ply==3.11
-pyasn1==0.4.5
-pyasn1-modules==0.2.5
-pycairo==1.16.2
-pycparser==2.19
-pycrypto==2.6.1
-pycups==1.9.73
-PyDispatcher==2.0.5
-PyGObject==3.30.1
-PyHamcrest==1.9.0
-pyOpenSSL==19.0.0
-python-apt==1.7.0
-python-debian==0.1.33
-pytz==2019.1
-pyxdg==0.25
-PyYAML==3.12
-queuelib==1.5.0
-reportlab==3.5.6
-requests==2.18.4
-requests-unixsocket==0.1.5
-Scrapy==1.6.0
+Django>=2
+Scrapy>=1.6
 scrapy-djangoitem==1.1.1
 scrapy-splash==0.7
-scrapyd==1.2.0
-SecretStorage==2.3.1
-service-identity==18.1.0
-six==1.12.0
-sqlparse==0.3.0
-ssh-import-id==5.7
-systemd-python==234
-Twisted==19.2.1
-ubuntu-drivers-common==0.0.0
-ufw==0.35
-unattended-upgrades==0.1
-urllib3==1.22
-usb-creator==0.3.3
-vboxapi==1.0
-vine==1.3.0
-virtualenv==15.1.0
-w3lib==1.20.0
-xkit==0.0.0
-zope.interface==4.6.0
+scrapyd==1.2
+jsonpath-rw>=1.4
+Celery==4.2.0
+future==0.17.1
+Pillow==5.4.1
+attrs>=17.4.0
